// Copyright 2020 The SODA Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package block;
option go_package = ".;block";

service Block {
    rpc ListVolumes (VolumeRequest) returns (ListVolumesResponse) {
    }
    rpc CreateVolume (CreateVolumeRequest) returns (CreateVolumeResponse) {
    }
}

message Volume {
    string  name                = 1;
    string  id                  = 2;
    int64   size                = 3;
    string  type                = 4;
    string  state               = 5;
    string  volumeId            = 6;
    bool    encrypted           = 7;
    string  availabilityZone    = 8;
    string  region              = 9;
    string  tenantId            = 10;
    string  userId              = 11;
    string  createdAt           = 12;
    string  updatedAt           = 13;
    string  backendId           = 14;
    int64   iops                = 15;

    // TODO: Add more attributes to make it generic Volume structure
}

message CreateVolumeRequest {
    Volume volume = 1;
}

message CreateVolumeResponse {
    Volume volume = 1;
}


message ListVolumesResponse {
    int32 errorCode = 1;
    repeated Volume volumes = 2;
}

message VolumeRequest {
    string backendId = 1;
}
